<resources>
    <string name="app_name">Parcel Driver</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_fname">FIRST NAME</string>
    <string name="text_fname_hint">Enter First Name</string>
    <string name="text_lname">LAST NAME</string>
    <string name="text_lname_hint">Enter Last Name</string>
    <string name="text_email">EMAIL</string>
    <string name="text_email_hint">Enter Email</string>
    <string name="text_number">NUMBER</string>
    <string name="text_number_hint">Enter Number</string>
    <string name="text_passs">PASSWORD</string>
    <string name="text_pass_hint">Enter Password</string>
    <string name="text_pass_current">Current Password</string>
    <string name="text_pass_current_hint">Enter Current Password</string>
    <string name="text_pass_new">NEW PASSWORD</string>
    <string name="text_pass_new_hint">Enter New Password</string>
    <string name="text_pass_retype">CONFIRM NEW PASSWORD</string>
    <string name="text_pass_retype_hint">Enter Confirm New Password</string>
    <string name="text_address">ADDRESS</string>
    <string name="text_zip">ZIPCODE</string>
    <string name="text_google">GOOGLE</string>
    <string name="text_facebook">FACEBOOK</string>
    <string name="text_next">NEXT</string>
    <string name="text_signin">Sign In</string>
    <string name="text_back">Back</string>
    <string name="text_mything">MY THING</string>
    <string name="text_desc1">DESC.1</string>
    <string name="text_desc2">DESC.2</string>
    <string name="text_comment">Write about your experience.We are always glad to hear from you.</string>
    <string name="text_register">Register</string>
    <string name="text_copyright">All Copyright Reserved</string>
    <string name="text_signin_with">Sign in with</string>
    <string name="text_username">Username</string>
    <string name="text_username_hint">Enter Username</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">Enter Password</string>
    <string name="text_forget_password">FORGOT PASSWORD</string>
    <string name="text_credit_card_number">CREDIT CARD NUMBER</string>
    <string name="text_mm">MM</string>
    <string name="text_yy">YY</string>
    <string name="text_cvc">CVC</string>
    <string name="text_addpayment">ADD PAYMENT</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_register_with">Register with</string>
    <string name="text_or">Or</string>
    <string name="text_upload_picture">Upload Picture From</string>
    <string name="text_forgetpass">Forgot Password ?</string>
    <string name="reset_pass">Please enter your registered mobile number and we will send you the Password</string>
    <string name="otp_phone">Please request verification code to verify mobile number</string>
    <string name="text_scan">SCAN</string>
    <string name="text_trip_details">Trip Details</string>
    <string name="text_contacting">CONTACTING NEARBY DRIVERS</string>
    <string name="text_waiting_for_confirm">WAITING FOR DRIVER TO CONFIRM TRIP</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_wait">Wait</string>
    <string name="text_getting_info_facebook">Getting info from facebook</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="my_location">MY LOCATION</string>
    <string name="client_location">CLIENT LOCATION</string>
    <string name="job_start_location">TRIP PICK UP LOCATION</string>
    <string name="text_miles">KM</string>
    <string name="text_mins">mins</string>
    <string name="text_profile">Profile</string>
    <string name="text_home">Home</string>
    <string name="text_history">Package Delivery History</string>
    <string name="text_setting">Settings</string>
    <string name="text_help">Help</string>
    <string name="text_avaibility">Availability</string>
    <string name="text_sound">Sound</string>
    <string name="text_sound_on">Sound On</string>
    <string name="text_sound_off">Sound Off</string>
    <string name="text_logout">Logout</string>
    <string name="text_seconds"> SECONDS</string>
    <string name="text_invoice">Invoice</string>
    <string name="text_base_price">Base Price</string>
    <string name="text_referral_bonus">Referral Bonus</string>
    <string name="text_promo_bonus">Promo Bonus</string>
    <string name="text_distance_cost">Distance Cost</string>
    <string name="text_destination">Client Destination</string>
    <string name="text_time_cost">Time Cost</string>
    <string name="payment_unit">$</string>
    <string name="text_time">TIME</string>
    <string name="text_total">Total</string>
    <string name="text_to_pay">R TO PAY</string>
    <string name="text_close">CLOSE</string>
    <string name="text_cost_per_mile">per</string>
    <string name="text_cost_per_hour">per min</string>
    <string name="text_no_history">No history to display</string>
    <string name="text_skip">SKIP</string>
    <string name="text_taxi_model">Taxi Model</string>
    <string name="text_taxi_number">Registration Number</string>
    <string name="text_approve">Your application is under review by admin.</string>
    <string name="text_approve_by_admin">You will receive confirmation email once admin approves your application.</string>
    <string name="text_regemail_popup">Please verify your e-mail address, you will not be able to modify it in future.</string>
    <string name="text_regmodelno_popup">Please verify model of your car, you will not be able to modify it in future.</string>
    <string name="text_regtaxino_popup">Please verify your taxi number, you will not be able to modify it in future.</string>
    <string name="text_regaction_popup">Please verify fields mark with info sign, you will not be able to modify these fields in future.</string>
    <string name="text_profile_popup">This field is not editable.</string>
    <string name="text_confirm">CONFIRM</string>
    <string name="text_exit_ok">OK</string>
    <string name="text_exit_cancel">CANCEL</string>
    <string name="text_offline_que">Do you want to go offline?</string>
    <string name="validate_history_date">From-date must be earlier than to-date</string>
    <string name="text_error_get_image">unable to get image, please try again.</string>
    <string name="app_id">188574674838201</string>
    <string-array name="menu_items">
        <item>PROFILE</item>
        
        <item>PROMOTIONS</item>
        <item>SHARE</item>
        <item>SUPPORT</item>
        <item>ABOUT</item>
        <item>LOGOUT</item>
    </string-array>
    <string name="text_accept">Accept</string>
    <string name="text_go_online_to">Go online to\nreceive request</string>
    <string name="text_reject">Reject</string>
    <string name="text_go_offline">Go Offline</string>
    <string name="text_go_online">Go Online</string>
    <string name="text_offline">Offline</string>
    <string name="text_amount">AMOUNT</string>
    <string name="text_send">SEND</string>
    <string name="text_total_time">Total Time</string>
    <string name="text_total_distance">Total Distance</string>
    <string name="text_call">CALL</string>
    <string name="text_est_time">Est. Time</string>
    <string name="text_est_distance">Est. Distance</string>
    <string name="text_walker_started">TAP WHEN STARTED</string>
    <string name="text_walker_arrived">TAP WHEN ARRIVED</string>
    <string name="text_walk_started">START TRIP</string>
    <string name="text_walk_completed">END TRIP</string>
    <string name="text_job_done">JOB DONE</string>
    <string name="text_empty_feedback">How was your trip?</string>
    <string name="text_empty_rating">Please give rating to client.</string>
    <string name="text_edit_profile">EDIT PROFILE</string>
    <string name="text_update_profile">UPDATE PROFILE</string>
    <string name="error_valid_email">Please enter valid email address</string>
    <string name="error_empty_email">Please enter email address</string>
    <string name="error_empty_password">Current password must not be blank</string>
    <string name="error_empty_retypepassword">You must enter confirm new password</string>
    <string name="error_empty_newpassword">You must enter new password</string>
    <string name="error_valid_password">Password should at least 6 characters long</string>
    <string name="error_mismatch_password">Your new password and confirm new password do not match</string>
    <string name="error_empty_fname">Please enter full name</string>
    <string name="error_empty_lname">Please enter last name</string>
    <string name="error_empty_number">Please enter phone number</string>
    <string name="error_empty_address">Please enter address</string>
    <string name="error_empty_bio">Please enter bio</string>
    <string name="error_empty_reg_password">Please enter password</string>
    <string name="error_empty_zipcode">Please enter zipcode</string>
    <string name="error_empty_image">Please select profile image</string>
    <string name="error_empty_type">Please select vehicle type</string>
    <string name="error_empty_model">Please enter taxi model</string>
    <string name="error_empty_year">Please enter year</string>
    <string name="error_empty_maker">Please enter car maker</string>
    <string name="error_empty_licnumber">Please enter license number</string>
    <string name="error_empty_taxi_no">Please enter taxi number</string>
    <string name="error_old_pass">Please enter old password</string>
    <string name="error_new_pass">Please enter new password</string>
    <string name="error_confirm_pass">Please enter confirm password</string>
    <string name="error_new_confirm_pass">password and confirm password should be same</string>
    <string name="error_phone_no">Please enter mobile number</string>
    <string name="error_phone_no_len">Phone number should be 10 digit number</string>
    <string name="error_car_make_no">Please enter car make</string>
    <string name="error_car_mode_no">Please enter car model</string>
    <string name="error_car_year_no">Please enter car year</string>
    <string name="error_license_no">Please enter license </string>
    <string name="error_password">Please enter password</string>
    <string name="error_password_len">Password must be at least 6 characters</string>
    <string name="error_confirm_password">Please enter confirm password</string>
    <string name="error_terms">Please accept terms and conditions</string>
    <string name="register_gcm">Registering for GCM</string>
    <string name="register_gcm_failed">Failed to register with GCM</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_text">Are you sure ?</string>
    <string name="dialog_exit_caps">Exit</string>
    <string name="dialog_exit_text">Are you sure ?</string>
    <string name="toast_no_internet">Internet not available</string>
    <string name="toast_signin_failed">Signin failed</string>
    <string name="toast_register_success">Thank You for your registration,please wait while the admin approves your request</string>
    <string name="toast_register_failed">Registration failed</string>
    <string name="Ok">OK</string>
    <string name="toast_facebook_login_failed">facebook login failed</string>
    <string name="toast_unable_to_selct_image">unable to select image</string>
    <string name="toast_unable_respond_request">Unable to respond request</string>
    <string name="toast_unable_send_request">Request sending failed</string>
    <string name="toast_feedback_success">Thank you for feedback!</string>
    <string name="toast_feedback_failed">Feedback sending failed</string>
    <string name="text_from">from</string>
    <string name="text_to">to</string>
    <string name="text_select_date">Select date</string>
</resources>