<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainDrawerActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/dimen_fp_margin_top" >

        <ImageView
            android:id="@+id/ivAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:src="@drawable/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.parcelsixd.parcel.driver.widget.MyFontButton
            android:id="@+id/btnFirstSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small_light"
            android:gravity="center"
            android:text="@string/text_signin"
            android:textSize="@dimen/size_general"
            android:textColor="@color/white" />

        <com.parcelsixd.parcel.driver.widget.MyFontButton
            android:id="@+id/btnFirstRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_small"
            android:gravity="center"
            android:text="@string/text_register"
            android:textSize="@dimen/size_general"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.parcelsixd.parcel.driver.widget.MyFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_fp_margin"
        android:paddingTop="@dimen/dimen_fp_margin"
        android:text="@string/text_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

</LinearLayout>
